site/src/content/docs/zh-cn/v0.1/quick-start.mdx
---
slug: zh-cn/v0.1/quick-start
title: 快速开始
description: 创建 Marivo project，加载 semantic catalog，并运行第一次指标中心分析。
---

用 `marivo init` 初始化 project（参见[安装](/zh-cn/v0.1/installation/#初始化一个-project)），
然后编写你的 declarations。一个最小 Marivo project 包含 manifest、datasource declarations
和 semantic declarations：

```text
your-project/
  marivo.toml
  models/
    datasources/
      warehouse.py
    semantic/
      sales/
        _domain.py
```

先声明 datasource：

```python
import marivo.datasource as md

md.duckdb(
    name="warehouse",
    path="warehouse.duckdb",
    ai_context={
        "business_definition": "Local DuckDB warehouse for sales analysis.",
        "guardrails": ["Use only for development or approved local analysis."],
    },
)
```

再声明 semantic objects：

```python
import marivo.datasource as md
import marivo.semantic as ms

ms.domain(
    name="sales",
    ai_context={
        "business_definition": "Sales order analysis domain.",
        "guardrails": ["Revenue metrics should only use completed orders."],
    },
)

orders = ms.entity(
    name="orders",
    datasource=md.ref("warehouse"),
    source=ms.table("orders"),
    primary_key=["order_id"],
    ai_context={
        "business_definition": "One row per sales order.",
        "guardrails": ["Exclude cancelled test data in metric definitions."],
    },
)


@ms.dimension(
    entity=orders,
    name="region",
    ai_context={
        "business_definition": "Sales region assigned to the order.",
        "guardrails": ["Do not treat missing region as a real region."],
    },
)
def region(orders):
    return orders.region


@ms.time_dimension(
    entity=orders,
    name="order_date",
    granularity="day",
    is_default=True,
    ai_context={
        "business_definition": "Calendar date when the order was placed.",
        "guardrails": ["Use this as the default time axis for order metrics."],
    },
)
def order_date(orders):
    return orders.order_date


@ms.metric(
    entities=[orders],
    additivity="additive",
    name="revenue",
    ai_context={
        "business_definition": "Total completed order amount.",
        "guardrails": ["Use only where order amount is already net of cancellations."],
    },
)
def revenue(orders):
    return orders.amount.sum()
```

你不必手写这些对象。`marivo init` 已经把 **`marivo-semantic` skill** 安装到 `.claude/skills/`
和 `.codex/skills/`，因此在 project 中运行的编码 agent（Claude Code 或 Codex）可以和你一起构建
semantic layer。把它指向你的表并提出请求：

> Use the marivo-semantic skill to model the `orders` table in the `sales` domain.

该 skill 会引导 agent 走一个有纪律的 authoring 循环，每次只处理一个对象：

- **遵循 ladder** —— domain → entity → dimension → time dimension → measure →
  metric → relationship —— 让每个对象的依赖先于它存在。
- **先规划，再编写。** 对每个对象，agent 先调用 `ms.prepare_*` API（例如
  `ms.prepare_metric`），根据返回的 brief 分支判断，再把 declaration 写入
  `models/semantic/<domain>/_domain.py`。
- **验证后再前进。** 每写完一个对象就运行 `ms.verify_object(ref)`，在它失败时不会继续。
- **closeout 时设闸。** 最后运行 `ms.readiness()`，在把 catalog 交给分析之前解决 blockers。

Agent 只会就那些无法从数据或 project 文档推断的决策征询你（例如某个金额是否已扣除退款）。它产出
的，正是上面展示的同一批 Python declarations —— 可以像其他代码一样在 git 中评审。

分析前先探索 catalog：

```python
import marivo.semantic as ms

catalog = ms.load()
catalog.list().show()

report = catalog.readiness()
if report.status == "blocked":
    report.show()
```

Catalog ready 后，开启 analysis session：

```python
import marivo.analysis as mv

session = mv.session.get_or_create(name="revenue-check", question="Why did Q4 drop?")
catalog = session.catalog
revenue = catalog.get("sales.revenue")
region = catalog.get("sales.orders.region")

current = session.observe(
    revenue,
    timescope={"start": "2026-10-01", "end": "2027-01-01"},
    grain="month",
    dimensions=[region],
)
baseline = session.observe(
    revenue,
    timescope={"start": "2025-10-01", "end": "2026-01-01"},
    grain="month",
    dimensions=[region],
)
delta = session.compare(current, baseline)
attribution = session.decompose(delta, axis=region)
attribution.show()
```

## 最佳实践

同样的 project 结构，可以从一次性脚本一路扩展到经过评审、可共享的分析 project。三个习惯决定
了差别。

### 把 semantic layer 当作共享的知识库来建设

Semantic layer 不只是触达表的管道 —— 它是 agent 在分析*之前*所读取的知识库。在每个对象上
投入 `ai_context`：

- `business_definition` —— 这个 metric 或 dimension 在业务上*意味着什么*。
- `guardrails` —— agent 必须遵守的规则：必需的过滤、排除项、范围限制。
- `synonyms` 与 `examples` —— 让 agent 把自然语言问题解析到正确的对象，而不是靠猜。

一个充分丰富的对象，无需人类介入就能回答 agent 的“我能用它吗，怎么用？”。Readiness 守住底线：
缺失 `business_definition` 会 block 分析，缺失 `guardrails` 会发出 warning。完整的 `ai_context`
契约参见 [Semantic Layer](/zh-cn/v0.1/concepts/semantic-layer/)。

### 用 git 管理 project

一个 Marivo project 就是纯文本：`marivo.toml` 加上 `models/` 下的 Python 文件。这让 semantic
layer 成为一个可评审、可共享的工件 —— 把它当作应用代码来对待。

- **对契约做版本控制。** 提交 `marivo.toml` 和 `models/`。对 metric 定义或 guardrail 的每一次
  改动都会以 diff 的形式呈现。
- **像评审代码一样评审 semantic 改动。** 通过 pull request 合入定义改动，让 domain owner 在
  agents 使用之前批准一个 metric 的*含义*。
- **通过仓库共享。** 任何 clone 该 project 的人 —— 以及任何在其中运行的 agent —— 都得到同一份
  可信 catalog。
- **把状态与 secrets 排除在 git 之外。** 把 `.marivo/` 加入 `.gitignore`：它保存的是 project
  本地的 session 与 evidence 状态，不是契约。凭据以 `*_env` references 的形式编写，从环境（或
  缓存于 user-global 的 `~/.marivo/secrets.toml`）解析 —— 它们从不写入 project。

一个典型的 `.gitignore`：

```text
.marivo/
```

### 交接前先设闸

加载后运行 `ms.readiness()`，并在任何分析 session 之前解决 blockers。一个 project 可以在
readiness 仍为 blocked 时成功加载，因此绝不要把一个 blocked 的 catalog 交给 agent。参见
[Readiness](/zh-cn/v0.1/concepts/readiness/)。
